--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "Secrets",
-  "homepage": "https://github.com/MelodyReyes09/auth-secrets"
+  "homepage": "https://github.com/MelodyReyes09/auth-secrets",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+     "predeploy": "npm run build",
+     "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "gh-pages": "^3.0.0",
     "md5": "^2.2.1",
     "mongoose": "^5.9.16",
     "mongoose-encryption": "^2.0.2",
